--- a/i18n/ja/code.json
+++ b/i18n/ja/code.json
@@ -1,6 +1,6 @@
 {
   "theme.ErrorPageContent.title": {
-    "message": "問題が発生しました",
+    "message": "ページがクラッシュしました。",
     "description": "The title of the fallback page when the page crashed"
   },
   "theme.BackToTopButton.buttonAriaLabel": {
@@ -8,39 +8,39 @@
     "description": "The ARIA label for the back to top button"
   },
   "theme.blog.archive.title": {
-    "message": "アーカイブ",
+    "message": "ブログアーカイブ",
     "description": "The page & hero title of the blog archive page"
   },
   "theme.blog.archive.description": {
-    "message": "アーカイブ",
+    "message": "過去のブログ投稿",
     "description": "The page & hero description of the blog archive page"
   },
   "theme.blog.paginator.navAriaLabel": {
-    "message": "ブログ投稿ナビゲーション",
+    "message": "ブログ投稿リストページネーション",
     "description": "The ARIA label for the blog pagination"
   },
   "theme.blog.paginator.newerEntries": {
-    "message": "新しい記事",
+    "message": "新しい投稿",
     "description": "The label used to navigate to the newer blog posts page (previous page)"
   },
   "theme.blog.paginator.olderEntries": {
-    "message": "古い記事",
+    "message": "古い投稿",
     "description": "The label used to navigate to the older blog posts page (next page)"
   },
   "theme.blog.post.paginator.navAriaLabel": {
-    "message": "ブログ記事のページ送り",
+    "message": "ブログ投稿ページネーション",
     "description": "The ARIA label for the blog posts pagination"
   },
   "theme.blog.post.paginator.newerPost": {
-    "message": "新しい記事",
+    "message": "新しい投稿",
     "description": "The blog post button label to navigate to the newer/previous post"
   },
   "theme.blog.post.paginator.olderPost": {
-    "message": "前の記事",
+    "message": "古い投稿",
     "description": "The blog post button label to navigate to the older/next post"
   },
   "theme.tags.tagsPageLink": {
-    "message": "タグ一覧を見る",
+    "message": "すべてのタグを見る",
     "description": "The label of the link targeting the tag list page"
   },
   "theme.colorToggle.ariaLabel.mode.system": {
@@ -56,50 +56,50 @@
     "description": "The name for the dark color mode"
   },
   "theme.colorToggle.ariaLabel": {
-    "message": "ダークモードを切り替える（現在の設定: {mode}）",
+    "message": "ライト/ダークモードを切り替え（現在：{mode}）",
     "description": "The ARIA label for the color mode toggle"
   },
   "theme.docs.DocCard.categoryDescription.plurals": {
-    "message": "{count}アイテム",
+    "message": "{count} アイテム",
     "description": "The default description for a category card in the generated index about how many items this category includes"
   },
   "theme.docs.breadcrumbs.navAriaLabel": {
-    "message": "パンくずナビゲーション",
+    "message": "ページパンくずリスト",
     "description": "The ARIA label for the breadcrumbs"
   },
   "theme.docs.paginator.navAriaLabel": {
-    "message": "ドキュメントページ",
+    "message": "ドキュメントページネーション",
     "description": "The ARIA label for the docs pagination"
   },
   "theme.docs.paginator.previous": {
-    "message": "前のドキュメントへ",
+    "message": "前へ",
     "description": "The label used to navigate to the previous doc"
   },
   "theme.docs.paginator.next": {
-    "message": "次のドキュメントへ",
+    "message": "次へ",
     "description": "The label used to navigate to the next doc"
   },
   "theme.docs.tagDocListPageTitle.nDocsTagged": {
-    "message": "{count} 件の記事",
+    "message": "{count} 件のドキュメントがタグ付けされています",
     "description": "Pluralized label for \"{count} docs tagged\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.docs.tagDocListPageTitle": {
-    "message": "「{tagName}」タグが付いた{nDocsTagged}",
+    "message": "{nDocsTagged}「{tagName}」",
     "description": "The title of the page for a docs tag"
   },
   "theme.docs.versionBadge.label": {
-    "message": "バージョン: {versionLabel}"
+    "message": "バージョン：{versionLabel}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "現在お使いの{siteTitle}のドキュメントは、正式リリース前のバージョン{versionLabel}です。",
+    "message": "これは {siteTitle} {versionLabel} バージョンの未公開ドキュメントです。",
     "description": "The label used to tell the user that he's browsing an unreleased doc version"
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
-    "message": "このドキュメントは{siteTitle}のバージョン{versionLabel}であり、現在はメンテナンスされておりません。",
+    "message": "これは {siteTitle} {versionLabel} バージョンのドキュメントで、現在は積極的にメンテナンスされていません。",
     "description": "The label used to tell the user that he's browsing an unmaintained doc version"
   },
   "theme.docs.versions.latestVersionSuggestionLabel": {
-    "message": "最新バージョンは{latestVersionLink} ({versionLabel})でご確認ください",
+    "message": "最新のドキュメントは {latestVersionLink} ({versionLabel}) をご覧ください。",
     "description": "The label used to tell the user to check the latest version"
   },
   "theme.docs.versions.latestVersionLinkLabel": {
@@ -111,19 +111,19 @@
     "description": "The link label to edit the current page"
   },
   "theme.common.headingLinkTitle": {
-    "message": "{heading} への直接リンク",
+    "message": "{heading}への直接リンク",
     "description": "Title for link to heading"
   },
   "theme.lastUpdated.atDate": {
-    "message": "{date} 更新",
+    "message": " {date} ",
     "description": "The words used to describe on which date a page has been last updated"
   },
   "theme.lastUpdated.byUser": {
-    "message": "{user}により",
+    "message": " {user} ",
     "description": "The words used to describe by who the page has been last updated"
   },
   "theme.lastUpdated.lastUpdatedAtBy": {
-    "message": "{atDate}{byUser}による最終更新",
+    "message": "最終更新{byUser}{atDate}",
     "description": "The sentence used to display when a page has been last updated, and by who"
   },
   "theme.NotFound.title": {
@@ -131,7 +131,7 @@
     "description": "The title of the 404 page"
   },
   "theme.navbar.mobileVersionsDropdown.label": {
-    "message": "モバイルナビゲーションバーのバージョン切り替えメニュー",
+    "message": "バージョンを選択",
     "description": "The label for the navbar versions dropdown on mobile view"
   },
   "theme.tags.tagsListLabel": {
@@ -147,7 +147,7 @@
     "description": "The default label used for the Danger admonition (:::danger)"
   },
   "theme.admonition.info": {
-    "message": "参考情報",
+    "message": "情報",
     "description": "The default label used for the Info admonition (:::info)"
   },
   "theme.admonition.note": {
@@ -159,7 +159,7 @@
     "description": "The default label used for the Tip admonition (:::tip)"
   },
   "theme.admonition.warning": {
-    "message": "警告",
+    "message": "注意",
     "description": "The default label used for the Warning admonition (:::warning)"
   },
   "theme.AnnouncementBar.closeButtonAriaLabel": {
@@ -167,19 +167,19 @@
     "description": "The ARIA label for close button of announcement bar"
   },
   "theme.blog.sidebar.navAriaLabel": {
-    "message": "最近のブログ記事ナビゲーション",
+    "message": "最近のブログ投稿ナビゲーション",
     "description": "The ARIA label for recent posts in the blog sidebar"
   },
   "theme.DocSidebarItem.expandCategoryAriaLabel": {
-    "message": "{label} の目次を展開",
+    "message": "サイドバーカテゴリー '{label}' を展開",
     "description": "The ARIA label to expand the sidebar category"
   },
   "theme.DocSidebarItem.collapseCategoryAriaLabel": {
-    "message": "{label}のカテゴリーを折り畳む",
+    "message": "サイドバーカテゴリー '{label}' を折りたたむ",
     "description": "The ARIA label to collapse the sidebar category"
   },
   "theme.IconExternalLink.ariaLabel": {
-    "message": "（新しいタブで開く）",
+    "message": "(新しいタブで開きます)",
     "description": "The ARIA label for the external link icon"
   },
   "theme.NavBar.navAriaLabel": {
@@ -191,15 +191,15 @@
     "description": "The first paragraph of the 404 page"
   },
   "theme.NotFound.p2": {
-    "message": "このページへリンクしているサイトの運営者に、リンクが壊れていることをお知らせください。",
+    "message": "元のリンクを提供したサイトの所有者に連絡し、リンクが壊れていることを伝えてください。",
     "description": "The 2nd paragraph of the 404 page"
   },
   "theme.TOCCollapsible.toggleButtonLabel": {
-    "message": "このページの目次",
+    "message": "ページ概要",
     "description": "The label used by the button on the collapsible TOC component"
   },
   "theme.navbar.mobileLanguageDropdown.label": {
-    "message": "他の言語",
+    "message": "言語を選択",
     "description": "The label for the mobile language switcher dropdown"
   },
   "theme.blog.post.readMore": {
@@ -207,11 +207,11 @@
     "description": "The label used in blog post item excerpts to link to full blog posts"
   },
   "theme.blog.post.readMoreLabel": {
-    "message": "{title}の詳細を見る",
+    "message": "{title} の全文を読む",
     "description": "The ARIA label for the link to full blog posts from excerpts"
   },
   "theme.blog.post.readingTime.plurals": {
-    "message": "約{readingTime}分",
+    "message": "所要時間 {readingTime} 分",
     "description": "Pluralized label for \"{readingTime} min read\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.CodeBlock.copy": {
@@ -219,23 +219,23 @@
     "description": "The copy button label on code blocks"
   },
   "theme.CodeBlock.copied": {
-    "message": "コピー済み",
+    "message": "コピーしました",
     "description": "The copied button label on code blocks"
   },
   "theme.CodeBlock.copyButtonAriaLabel": {
-    "message": "コードブロックをクリップボードにコピー",
+    "message": "コードをクリップボードにコピー",
     "description": "The ARIA label for copy code blocks button"
   },
   "theme.CodeBlock.wordWrapToggle": {
-    "message": "折り返し",
+    "message": "自動折り返しを切り替え",
     "description": "The title attribute for toggle word wrapping button of code block lines"
   },
   "theme.docs.breadcrumbs.home": {
-    "message": "ホーム",
+    "message": "ホームページ",
     "description": "The ARIA label for the home page in the breadcrumbs"
   },
   "theme.docs.sidebar.collapseButtonTitle": {
-    "message": "サイドバーを閉じる",
+    "message": "サイドバーを折りたたむ",
     "description": "The title attribute for collapse button of doc sidebar"
   },
   "theme.docs.sidebar.collapseButtonAriaLabel": {
@@ -243,27 +243,27 @@
     "description": "The title attribute for collapse button of doc sidebar"
   },
   "theme.docs.sidebar.navAriaLabel": {
-    "message": "ドキュメントナビゲーションサイドバー",
+    "message": "ドキュメントサイドバー",
     "description": "The ARIA label for the sidebar navigation"
   },
   "theme.docs.sidebar.closeSidebarButtonAriaLabel": {
-    "message": "モバイルサイドバーを閉じる",
+    "message": "ナビゲーションバーを閉じる",
     "description": "The ARIA label for close button of mobile sidebar"
   },
   "theme.navbar.mobileSidebarSecondaryMenu.backButtonLabel": {
-    "message": "メインメニューへ戻る",
+    "message": "← メインメニューに戻る",
     "description": "The label of the back button to return to main menu, inside the mobile navbar sidebar secondary menu (notably used to display the docs sidebar)"
   },
   "theme.docs.sidebar.toggleSidebarButtonAriaLabel": {
-    "message": "モバイルナビゲーションのハンバーガーメニューボタンのARIAラベル",
+    "message": "ナビゲーションバーの表示を切り替え",
     "description": "The ARIA label for hamburger menu button of mobile navigation"
   },
   "theme.navbar.mobileDropdown.collapseButton.expandAriaLabel": {
-    "message": "ドロップダウンを開く",
+    "message": "ドロップダウンを展開",
     "description": "The ARIA label of the button to expand the mobile dropdown navbar item"
   },
   "theme.navbar.mobileDropdown.collapseButton.collapseAriaLabel": {
-    "message": "モバイルドロップダウンナビゲーションアイテムを閉じる",
+    "message": "ドロップダウンを折りたたむ",
     "description": "The ARIA label of the button to collapse the mobile dropdown navbar item"
   },
   "theme.docs.sidebar.expandButtonTitle": {
@@ -275,15 +275,15 @@
     "description": "The ARIA label and title attribute for expand button of doc sidebar"
   },
   "theme.blog.post.plurals": {
-    "message": "{count} 件|{count} 件",
+    "message": "{count} 件の投稿",
     "description": "Pluralized label for \"{count} posts\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.blog.tagTitle": {
-    "message": "「{tagName}」タグの記事が{nPosts}件あります",
+    "message": "{nPosts} タグ「{tagName}」付き",
     "description": "The title of the page for a blog tag"
   },
   "theme.blog.author.pageTitle": {
-    "message": "{authorName} - {nPosts}件の記事",
+    "message": "{authorName} - {nPosts}",
     "description": "The title of the page for a blog author"
   },
   "theme.blog.authorsList.pageTitle": {
@@ -291,11 +291,11 @@
     "description": "The title of the authors page"
   },
   "theme.blog.authorsList.viewAll": {
-    "message": "すべての著者を表示",
+    "message": "すべての著者を見る",
     "description": "The label of the link targeting the blog authors page"
   },
   "theme.blog.author.noPosts": {
-    "message": "この著者のブログ投稿はまだありません。",
+    "message": "この著者はまだ投稿していません。",
     "description": "The text for authors with 0 blog post"
   },
   "theme.contentVisibility.unlistedBanner.title": {
@@ -303,7 +303,7 @@
     "description": "The unlisted content banner title"
   },
   "theme.contentVisibility.unlistedBanner.message": {
-    "message": "このコンテンツは非公開です。検索エンジンのインデックス対象外となり、このページへの直接リンクを持つユーザーのみが閲覧可能です。",
+    "message": "このページは非公開です。検索エンジンにインデックスされず、直接リンクを持つユーザーのみがアクセスできます。",
     "description": "The unlisted content banner message"
   },
   "theme.contentVisibility.draftBanner.title": {
@@ -311,11 +311,11 @@
     "description": "The draft content banner title"
   },
   "theme.contentVisibility.draftBanner.message": {
-    "message": "これは下書きページです。開発環境でのみ表示され、本番ビルドには含まれません。",
+    "message": "このページは下書きです。開発環境でのみ表示され、本番ビルドには含まれません。",
     "description": "The draft content banner message"
   },
   "theme.ErrorPageContent.tryAgain": {
-    "message": "再レンダリングを試す",
+    "message": "再試行",
     "description": "The label of the button to try again rendering when the React error boundary captures an error"
   },
   "theme.common.skipToMainContent": {
@@ -323,35 +323,35 @@
     "description": "The skip to content label used for accessibility, allowing to rapidly navigate to main content with keyboard tab/enter navigation"
   },
   "theme.tags.tagsPageTitle": {
-    "message": "タグ一覧",
+    "message": "タグ",
     "description": "The title of the tag list page"
   },
   "homepage.visitDocs": {
-    "message": "使用説明を確認する"
+    "message": "使用方法を見る"
   },
   "homepage.title": {
     "message": "{title} へようこそ"
   },
   "homepage.description": {
-    "message": "EZSドキュメントサイト"
+    "message": "UnderSilicon(シリコンの下) ドキュメントサイト"
   },
   "易于使用": {
     "message": "使いやすい"
   },
   "Docusaurus 从一开始就设计为易于安装和使用，让您的网站快速运行起来。": {
-    "message": "Docusaurusは最初から、簡単にインストールおよび使用できるように設計されており、あなたのWebサイトを迅速に立ち上げることができます。"
+    "message": "Docusaurusは最初から簡単にインストールして使用できるように設計されており、サイトをすぐに立ち上げることができます。"
   },
   "专注于核心内容": {
-    "message": "コアコンテンツに焦点を当てる"
+    "message": "コンテンツに集中"
   },
   "Docusaurus 让您专注于文档本身，繁琐的工作交给我们。只需将文档放入 {docs} 目录即可。": {
-    "message": "Docusaurusは、ドキュメントそのものに集中できるように設計されています。面倒な作業は私たちにお任せください。ドキュメントを{docs}ディレクトリに追加するだけで完了です。"
+    "message": "Docusaurusはドキュメントそのものに集中できるようにします。面倒な作業は私たちが引き受けます。ドキュメントを{docs}ディレクトリに置くだけです。"
   },
   "基于 React 构建": {
-    "message": "React ベースで構築"
+    "message": "Reactベースで構築"
   },
   "通过复用 React 来扩展或定制您的网站布局。Docusaurus 支持在复用头部和底部的同时进行扩展。": {
-    "message": "Reactを再利用して、サイトのレイアウトを拡張またはカスタマイズします。Docusaurusは、ヘッダーやフッターを再利用しながら拡張することをサポートします。"
+    "message": "Reactを再利用してサイトレイアウトを拡張またはカスタマイズします。Docusaurusはヘッダーとフッターを再利用しながら拡張をサポートします。"
   },
   "homepage.downloadClient": {
     "message": "クライアントをダウンロード"
@@ -360,24 +360,30 @@
     "message": "ハードウェアエコシステムと接続"
   },
   "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
-    "message": "対応する多種多様なスマート端末（モーター、バイブレーター、電気パルスデバイスなど）、高速Wi-Fi接続設定、安定した接続、簡単操作。"
+    "message": "複数のスマートデバイス（モーター、バイブレーター、パルスデバイスなど）をサポートし、高速Wi-Fi設定、安定した接続、簡単な操作を実現します。"
   },
   "无限创意玩法": {
-    "message": "無限に広がるクリエイティブな遊び方"
+    "message": "無限のクリエイティブな遊び"
   },
   "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
-    "message": "内蔵の腕立て伏せ検出、電気ショッククイズ、寸止めトレーニングなど、多彩で楽しいインタラクションモードを搭載し、コントロールをより楽しくします。"
+    "message": "腕立て伏せ検出、電気ショッククイズ、寸止めトレーニングなど、さまざまなインタラクティブモードを内蔵し、コントロールをより楽しくします。"
   },
   "全平台控制": {
-    "message": "全プラットフォーム制御"
+    "message": "全プラットフォーム対応"
   },
   "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
-    "message": "強力なPCクライアントとモバイル端末（アプリ／ミニアプリ）を提供し、いつでもどこでもデバイスの状態を管理できます。"
+    "message": "強力なPCクライアントとモバイルサポート（アプリ/ミニプログラム）を提供し、いつでもどこでもデバイス状態を管理できます。"
   },
   "开放开发生态": {
-    "message": "オープンデベロッパーエコシステム"
+    "message": "オープン開発エコシステム"
   },
   "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
-    "message": "Python制御インターフェースとオープンソースコードを提供し、開発者によるカスタム拡張をサポートし、知能玩具体験の共創を実現します。"
+    "message": "Pythonコントロールインターフェースとオープンソースコードを提供し、開発者がカスタム拡張をサポートして、スマートトイの体験を共に構築できます。"
+  },
+  "homepage.heroTitle": {
+    "message": "UnderSilicon(シリコンの下) ドキュメント"
+  },
+  "homepage.heroTagline": {
+    "message": "UnderSilicon(シリコンの下) スマートエコシステムを探索し、無限のインタラクティブな遊びを解き放つ"
   }
 }
