--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -8,7 +8,7 @@
     "description": "The label for category '（电脑版）控制客户端' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.玩法说明": {
-    "message": "How to Play",
+    "message": "Gameplay Instructions",
     "description": "The label for category '玩法说明' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.设备介绍 & 购买": {
@@ -20,7 +20,7 @@
     "description": "The label for category '其他使用说明' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.设备连接 WiFi（配网）": {
-    "message": "Connect Device to WiFi (Network Provisioning)",
+    "message": "Device WiFi Connection (Network Setup)",
     "description": "The label for category '设备连接 WiFi（配网）' in sidebar 'tutorialSidebar'"
   },
   "sidebar.tutorialSidebar.category.开发文档": {
