--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -36,7 +36,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/facebook/docusaurus"
   },
   "copyright": {
-    "message": "Copyright © 2026 EZS Documentation, Inc. Built with Docusaurus.",
+    "message": "Copyright © 2026 EZS Docs, Inc. Built with Docusaurus.",
     "description": "The footer copyright"
   }
 }
