--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -1,10 +1,10 @@
 {
   "title": {
-    "message": "EZS Docs",
+    "message": "UnderSilicon Documentation",
     "description": "The title in the navbar"
   },
   "logo.alt": {
-    "message": "EZS Docs Logo",
+    "message": "EZS Documentation Logo",
     "description": "The alt text of navbar logo"
   },
   "item.label.文档": {
