--- a/i18n/es/docusaurus-theme-classic/footer.json
+++ b/i18n/es/docusaurus-theme-classic/footer.json
@@ -36,7 +36,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/facebook/docusaurus"
   },
   "copyright": {
-    "message": "Copyright © 2026 Documentación EZS, Inc. Construido con Docusaurus.",
+    "message": "Copyright © 2026 EZS Documentación, Inc. Construido con Docusaurus.",
     "description": "The footer copyright"
   }
 }
