--- a/i18n/ja/docusaurus-theme-classic/footer.json
+++ b/i18n/ja/docusaurus-theme-classic/footer.json
@@ -8,11 +8,11 @@
     "description": "The title of the footer links column with title=社区 in the footer"
   },
   "link.title.更多": {
-    "message": "もっと",
+    "message": "その他",
     "description": "The title of the footer links column with title=更多 in the footer"
   },
   "link.item.label.使用说明": {
-    "message": "ご利用方法",
+    "message": "使用説明",
     "description": "The label of footer link with label=使用说明 linking to /docs/"
   },
   "link.item.label.Stack Overflow": {
@@ -24,7 +24,7 @@
     "description": "The label of footer link with label=Discord linking to https://discordapp.com/invite/docusaurus"
   },
   "link.item.label.X": {
-    "message": "エックス",
+    "message": "X",
     "description": "The label of footer link with label=X linking to https://x.com/docusaurus"
   },
   "link.item.label.博客": {
@@ -36,7 +36,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/facebook/docusaurus"
   },
   "copyright": {
-    "message": "Copyright © 2026 EZS ドキュメント, Inc. は Docusaurus で構築されています。",
+    "message": "Copyright © 2026 EZS ドキュメント, Inc. Built with Docusaurus.",
     "description": "The footer copyright"
   }
 }
